fixed issue where book css overlaped with other pages

--- a/assets/css/basics/forms.css
+++ b/assets/css/basics/forms.css
@@ -1,19 +1,19 @@
-button {
-    cursor: pointer;
-    background-color: var(--clr3bg);
-    margin: 0.5em;
-    border: 0;
-    padding: 0.5em 0.8em;
-    border-radius: 4px;
+.book-index button {
+	cursor: pointer;
+	background-color: var(--clr3bg);
+	margin: 0.5em;
+	border: 0;
+	padding: 0.5em 0.8em;
+	border-radius: 4px;
 }
 
-button:hover {
-    background-color: var(--clr2);
-    color: white;
-    transition: 0.3s;
+.book-index button:hover {
+	background-color: var(--clr2);
+	color: white;
+	transition: 0.3s;
 }
 
-input:focus {
-    background-color: var(--clr1bg);
-    transition: background-color 1s;
+.book-index input:focus {
+	background-color: var(--clr1bg);
+	transition: background-color 1s;
 }
